syntax = "proto3";
option go_package = "./proto";
package proto;

// The greeting service definition.
service VoteService {
  // Sends a greeting
  rpc Vote (VoteRequest) returns (VoteReply) {}
}

// The request message containing the user's id and password.
message VoteRequest {
  string id = 1;
  string candidate = 2;
  string politicalParty = 3;
  string civicCredential = 4;
}

// The response message containing the greetings
message VoteReply {
  string message = 1;
}

// TODO
//Execute this command to create .pb files
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/voterService/voter.proto