syntax = "proto3";
option go_package = "./proto";
package proto;


service CertificateService {
  rpc Certificate (CertificateRequest) returns (CertificateReply) {}
}

message CertificateRequest {
  string id_voter = 1;
}

message CertificateReply {
  string message = 1;
}

// TODO
//Execute this command to create .pb files
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/voteService/voter.proto